Wed Jul 21 22:46:27 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcombobox.c (gtk_combo_box_new_text): Don't leak the
	list store.  (#148134, Crispin Flowerday)

Wed Jul 21 22:35:47 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcombobox.c (gtk_combo_box_destroy): Don't leak the
	menu.  (#148110, Tommi Komulainen)

Wed Jul 21 22:24:10 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcellview.c (gtk_cell_view_finalize): Don't leak
	tree model and tree row reference.  (#148125, Crispin Flowerday)

Wed Jul 21 22:17:06 2004  Matthias Clasen  <maclas@gmx.de>

	* tests/testcombo.c (main): Don't leak models.  (#148128,
	Tommi Komulainen)

Wed Jul 21 21:26:08 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkviewport.c (viewport_set_adjustment): Don't leak
	the adjustments.  (#148089, Tommi Komulainen)

Wed Jul 21 21:20:21 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktreeview.c (gtk_tree_view_destroy): Don't leak
	the adjustments.  (#148073, Tommi Komulainen)

Wed Jul 21 21:04:50 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktoolbar.c (gtk_toolbar_finalize): Don't leak the 
	arrow.  (#148064, Tommi Komulainen)

2004-07-21  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcalendar.c: Use the new text target functionality
	in GtkTargetList instead of hardcoding a subset of text targets.

Tue Jul 20 23:11:23 2004  Matthias Clasen  <maclas@gmx.de>

	* gdk/x11/gdkevents-x11.c: Hook up gtk-menu-bar-accel to
	an XSetting, Gtk/MenuBarAccel.  (#120859, Scott James Remnant)

Tue Jul 20 22:26:29 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkfilechooserutils.h: 
	* gtk/gtktoolbutton.c: 
	* gtk/gtktoolbar.c: 
	* gtk/gtkicontheme.c: 
	* gtk/gtkcalendar.c: 
	* demos/gtk-demo/ui_manager.c: 
	* demos/gtk-demo/appwindow.c: Remove trailing commas
	from enumerations.  (#148035)

2004-07-20  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkcellrenderer.c (gtk_cell_renderer_class_init): Fix the
	documentation comment for the editing-started signal.
